erDiagram
    users ||--o{ orders : "places"
    users ||--o| merchants : "operates"
    merchants ||--o{ products : "sells"
    orders ||--|{ order_items : "contains"
    products ||--o{ order_items : "included_in"

    users {
        int id PK
        string email UK "Unique and non-null"
        text password_hash
        enum role "ENUM('admin', 'merchant', 'client')"
    }

    merchants {
        int user_id PK,FK
        string business_name
        string tax_id
        boolean verified
    }

    products {
        int id PK
        int merchant_id FK "References merchants(user_id)"
        string name
        float price
        int inventory
        text description
        text[] images
        string stripe_price_id
        string stripe_product_id
        boolean is_deleted "Defaults to FALSE"
    }

    orders {
        int id PK
        int user_id FK "References users(id)"
        float total
        enum status "ENUM('processing', 'cancelled', 'completed')"
        string transaction_id
        string checkout_session_id
        enum payment_status "ENUM('pending', 'completed', 'cancelled')"
        string address
        timestamp created_at "Defaults to CURRENT_TIMESTAMP"
        timestamp updated_at "Defaults to CURRENT_TIMESTAMP"
    }

    order_items {
        int order_id PK,FK "References orders(id)"
        int product_id PK,FK "References products(id)"
        int quantity
        float price
        timestamp created_at "Defaults to CURRENT_TIMESTAMP"
        timestamp updated_at "Defaults to CURRENT_TIMESTAMP"
    }
